implement JWT validation via Vault Transit engine
Replaces the stub TokenValidationService provider with a LocalPublicKeyService marker (TransitLocalPublicKeyResolver) that routes signature verification through the Transit engine instead of resolving a raw public key. TransitValidationService now handles both Transit-backed and standard public-key verification paths. Also fixes supported JWS algorithms in TransitSigner, URL-encodes key IDs in Transit key names, and serializes public keys as JWK.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>